fixed issue with ward-wrap

--- a/_sass/announcements.scss
+++ b/_sass/announcements.scss
@@ -20,7 +20,7 @@ div.announcement-content {
 
   a, p {
     margin: 0;
-    break-word: break-word;
+    word-wrap:break-word;
   }
 
   h2 {
